[package]
name = "frost-ed25519-lib"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
frost-core = "2.0.0"
frost-ed25519 = "2.0.0"
ffi-support = "0.4.4"
libc = "0.2.161"
ed25519-dalek = "2.1.1"
rand = "0.8.5"
num-bigint = "0.4.4"
num-traits = "0.2.18"
num-iter = "0.1.44"
hex = "0.4.3"
base64 = "0.22.0"
serde = "1.0.214"
serdect = "0.2.0"
serde_json = "1.0.115"
anyhow = "1.0.82"
futures = "0.3.30"
lazy_static = "1.4.0"
uuid = {version = "1.8.0" , features = ["v4" , "fast-rng","macro-diagnostics"]}

[build-dependencies]
cbindgen = "0.27"  # Latest version of cbindgen

[lib]
crate-type = ["cdylib"]
name = "frost_ed25519"