[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "frost-lib"
version = "0.3.0"
description = "A Rust library with Python CFFI bindings"
authors = [{ name = "Your Name", email = "your.email@example.com" }]

requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "bitcoin-utils~=0.6.8",
    "cffi>=1.16.0",
    "maturin>=1.8.3",
    "pydantic~=2.10.6",
    "requests>=2.31.0",
]

[tool.maturin]
manifest-path = "frost-secp256k1-tr/Cargo.toml"
python-source = "python"
module-name = "frost_lib.secp256k1_tr"
bindings = "cffi"
