[package]
name = "frost-ed25519"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
frost-core = { git = "https://github.com/sadeghte/frost.git", features = ["serde"] }
frost-ed25519 = { git = "https://github.com/sadeghte/frost.git", features = ["serde"] }

ffi-support = "0.4.4"
libc = "0.2.161"
rand = "0.8.5"
hex = "0.4.3"
base64 = "0.22.0"
serde = "1.0.214"
serdect = "0.2.0"
serde_json = "1.0.115"

[build-dependencies]
cbindgen = "0.27"  # Latest version of cbindgen

[lib]
crate-type = ["cdylib"]
name = "frost_ed25519"