[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "secp256k1_tr"
version = "0.1.0"
description = "A Rust library with Python CFFI bindings"
authors = [{ name = "Your Name", email = "your.email@example.com" }]

requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
]
dependencies = ["cffi>=1.15.0", "maturin>=1.8.3"]

[tool.maturin]
module-name = "frost_lib.secp256k1_tr"
bindings = "cffi"





